assets/css/main.scss
---
# Only the main Sass file needs front matter (the dashes are enough)
---

@charset "utf-8";

@import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'default' }}"; // skin
@import "minimal-mistakes"; // main partials

$indigo-color: #292961;
$light-blue-color: #ebf1f4; /* brighter blue #eefcfb */
$deep-green-color: #03775E;
$orange-color: #AA3704;

html {
	font-size: 16px;
	color: #000;
}

html h1, h2, h3, h4, h5, h6 {
	color: #333;
}

h2 {
    font-size: 2em;
    margin: 0;
}

ol, ul {
    list-style: none;
}

ul li, 
ol li { 
    margin-bottom: 0; 
}

li ul, 
li ol { 
    margin-top: 0; 
}

form {
    background-color: #FFF;
}

h1 a {
	text-decoration: none;
}
.greedy-nav a.site-logo {
    margin-right: 0;
}

.site-logo img {
    margin-right: 0;
}

.site-title .location {
    font-size: 0.9em;
    letter-spacing: 8px;
    line-height: 1em;
    margin-left: 2px;
    text-transform: uppercase;
}

.site-title .title {
    font-family: 'Laila', sans-serif;
    font-size: 1.3em;
    line-height: 1.1em;
}

.greedy-nav a {
    color: #000;
}

.greedy-nav .visible-links a {
    color: $indigo-color;
    font-weight: 600;
    text-transform: uppercase;
}

.greedy-nav .visible-links a:before {
    background-color: $orange-color;
}

.row {
}

.row .content {
    margin: 0 auto;
    max-width: 80%;
    padding: 60px 0;
}

.intro .map {
    background-repeat: no-repeat;
    min-height: 322px;
    padding-top: 10px;
}

.intro.row {
    background-color: $light-blue-color; 
}

.intro h1 {
    font-size: 56px;
}

html .masthead #site-title {
	font-weight: 400;
}

html h1#page-title {
	margin: 15px 0;
	font-weight: 600;
	text-align: center;
	font-size: 2em;
}

html h6 {
	font-weight: 500;
	text-transform: uppercase; 
}

html body {
	color: #444;
}

html body .site-title {
	font-weight: 500;
}

html .masthead {
	background-color:#FFF;
    box-shadow: 0 2px 10px 0 rgba(0,0,0,0.1);
}

html .masthead .site-title-wrapper {
	min-width: 250px;
}

html .masthead .visible-links {
	overflow: visible;
}

.intro {
    text-align: center;
}

.intro h1 {
    font-size: 56px;
}

.intro h5 {
    margin: 30px 0;
}

.intro a {
    background-color: #168743;
    background-color: #04AA6D;
    border-radius: 5px; 
    color: white;
    font-size: 16px;
    font-weight: bold;
    display: inline-block;
    padding: 16px 80px;
    text-decoration: none;
}

.animate {
 background-image: linear-gradient(
    -225deg,
    $indigo-color 0%,
    $deep-green-color 29%,
    $orange-color 67%,
    #292961 100%
  );
  background-size: auto auto;
  background-clip: border-box;
  background-size: 200% auto;
  color: #fff;
  background-clip: text;
  text-fill-color: transparent;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  animation: textclip 2s linear infinite;
}

@keyframes textclip {
  to {
    background-position: 200% center;
  }
}


#flip {
  height:70px;
  overflow:hidden;
}

#flip > div > div {
  padding:4px 12px;
  height:70px;
  margin-bottom:70px;
  display:inline-block;
}

#flip div:first-child {
  animation: show 7s linear infinite;
}

#flip div div {
  color: $orange-color;
}
#flip div:first-child div {
  color: $indigo-color;
}
#flip div:last-child div {
  color: $deep-green-color;
}

@keyframes show {
  0% {margin-top:-420px;}
  5% {margin-top:-280px;}
  33% {margin-top:-280px;}
  38% {margin-top:-140px;}
  66% {margin-top:-140px;}
  71% {margin-top:0px;}
  99.99% {margin-top:0px;}
  100% {margin-top:-420px;}
}

hr {
    background: $indigo-color;
    height: 10px;
    margin: 0;
}

h5 {
    color: #000;
}

ul.topics {
    display: -webkit-box;
    display: -webkit-flex;
    display: -moz-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
    padding-top: 40px;
}

li.topic {
    margin-right: 24px;
    padding-bottom: 48px;
    width: calc(50% - 24px);
}

html table {
    border-radius: 8px;
    border: 1px solid #dadce0;
	font-size: 0.9em;
}

thead {
    background-color: #FFF;
}

html table .scientific_name,
html table .height { 
	color: #888;
	font-size: 0.9em;
}

html table .scientific_name {
	font-style: italic;
}

.plant_table td.name img {
    float: left;
    margin: 5px 10px 0 0;
}

.plant_table td.name {
    min-width: 200px
}

.plant_filters .filter_input {
    float: left;
    margin-right: 15px;
}

#new_search_location {
    float: left;
    margin-right: 15px;
}

.nursery-container .nursery,
.seed-container .seed_source {
	background-color: white;
	float: left;
	margin-bottom: 10px;
	margin-right: 20px;
	min-height: 350px;
	width: 300px;
}

.nursery .info, 
.seed_source .info {
	padding: 0 30px 20px;
}

.volunteer_opportunity {
	background-color: white;
	padding: 20px 30px 20px;
	margin-bottom: 10px;
}

.volunteer_opportunity img {
	float: left;
	margin-right: 20px;
}

.sun_req div {
  display:none; 
  height: 15px;
  width: 15px;
}

.sun_req div.visible {
  display: block;
  margin-bottom:2px;
}

.sun_req .full_sun {
  background-color: #fff44f;
}

.sun_req .part_shade {
  background-image: linear-gradient(0deg, gray ,#fff44f);
}

.sun_req .full_shade {
  background-color: gray;
}

#footer {
    color: #FFF;
    background-color: $indigo-color;
}

